--- a/fail.html
+++ b/fail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0"/>
     <title>FALLO</title>
     <script language="JavaScript">
         function redireccionar() {
@@ -11,7 +11,7 @@
         </script>
 </head>
 <body onLoad="redireccionar();">
-    <h1>FALLO, ESPERAR....</h1>
+    <h1 style="background-color: red;">FALLO, ESPERAR....</h1>
     
    
 </body>
