--- a/good.html
+++ b/good.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FALLO</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0"/>
+    <title>EXITO</title>
     <script language="JavaScript">
         function redireccionar() {
           setTimeout("location.href='index.html'", 2000);
@@ -11,7 +11,7 @@
         </script>
 </head>
 <body onLoad="redireccionar();">
-    <h1>EXITO!!! ESPERAR....</h1>
+    <h1 style = 'background-color:green;'>EXITO!!! ESPERAR....</h1>
     
    
 </body>
